automatically redirect to jarvis page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </p>
 
     <a href="/api/index.html" rel="noopener noreferrer">Jarvis Application/HTTP API</a>
-    <a href="/pip/index.html" rel="noopener noreferrer">Jarvis pip Package</a>
+    <a href="/pip/jarvis.html" rel="noopener noreferrer">Jarvis pip Package</a>
 </body>
 </html>
